src/test/ui/did_you_mean/issue-31424.nll.stderr
error[E0596]: cannot borrow `self` as mutable, as it is not declared as mutable
  --> $DIR/issue-31424.rs:7:9
   |
LL |         (&mut self).bar();
   |         ^^^^^^^^^^^
   |         |
   |         cannot borrow as mutable
   |         try removing `&mut` here

warning: function cannot return without recursing
  --> $DIR/issue-31424.rs:12:5
   |
LL |     fn bar(self: &mut Self) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
LL |
LL |         (&mut self).bar();
   |         ----------------- recursive call site
   |
   = note: #[warn(unconditional_recursion)] on by default
   = help: a `loop` may express intention better if this is on purpose

error[E0596]: cannot borrow `self` as mutable, as it is not declared as mutable
  --> $DIR/issue-31424.rs:14:9
   |
LL |         (&mut self).bar();
   |         ^^^^^^^^^^^
   |         |
   |         cannot borrow as mutable
   |         try removing `&mut` here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
